feat: bouton upgrade Pro branché sur Stripe

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -352,7 +352,7 @@
                 <div class="sidebar-plan-name">Plan Free <span class="plan-chip">Free</span></div>
                 <div class="quota-progress"><div class="quota-fill" id="quota-fill" style="width:0%"></div></div>
                 <div class="quota-text" id="quota-text">0 / 3 countdowns</div>
-                <button class="btn btn-primary btn-sm" style="width:100%;justify-content:center;margin-top:8px">Passer à Pro ↗</button>
+                <button class="btn btn-primary btn-sm" style="width:100%;justify-content:center;margin-top:8px" onclick="upgradePlan('pro_monthly')">Passer à Pro ↗</button>
             </div>
         </div>
         <div class="main-content">
