--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
     <ul class="nav-links">
         <li><a href="#" onclick="showPage('landing')">Accueil</a></li>
         <li><a href="#" onclick="showPage('pricing')">Tarifs</a></li>
-        <li><a href="#" id="nav-dashboard-link" onclick="handleDashboardClick()">Dashboard</a></li>
+        <li><a href="#" onclick="handleDashboardClick()">Dashboard</a></li>
     </ul>
     <div class="nav-cta" id="nav-cta-guest">
         <button class="btn btn-ghost" onclick="showPage('login')">Se connecter</button>
@@ -122,6 +122,114 @@
 </div>
 
 <!-- ============================================================
+     PRICING PAGE
+     ============================================================ -->
+<div id="page-pricing" class="page">
+    <div class="pricing-layout">
+        <div class="pricing-header">
+            <div class="section-eyebrow" style="text-align:center">Tarifs</div>
+            <h2 class="pricing-title">Simple et transparent</h2>
+            <p class="pricing-subtitle">Commencez gratuitement, passez à un plan supérieur quand vous en avez besoin.</p>
+            <div class="pricing-toggle">
+                <span id="toggle-label-monthly" style="font-weight:700;color:var(--text)">Mensuel</span>
+                <div class="toggle-switch" id="billing-toggle" onclick="toggleBilling()">
+                    <div class="toggle-knob" id="toggle-knob"></div>
+                </div>
+                <span id="toggle-label-yearly" style="color:var(--muted)">Annuel <span class="saving-badge">−25%</span></span>
+            </div>
+        </div>
+
+        <div class="pricing-grid">
+            <!-- FREE -->
+            <div class="pricing-card">
+                <div class="pricing-plan-name">Free</div>
+                <div class="pricing-price-row">
+                    <div class="pricing-price">0€</div>
+                    <div class="pricing-period">/mois</div>
+                </div>
+                <div class="pricing-desc">Pour découvrir et tester chrono.mail</div>
+                <button class="btn btn-ghost" style="width:100%;justify-content:center;margin:20px 0" onclick="showPage('register')">Commencer gratuitement</button>
+                <div class="pricing-features">
+                    <div class="pricing-feature">✓ 3 countdowns actifs</div>
+                    <div class="pricing-feature">✓ GIF animé standard</div>
+                    <div class="pricing-feature">✓ Couleurs personnalisables</div>
+                    <div class="pricing-feature">✓ Code HTML à copier</div>
+                    <div class="pricing-feature muted">✗ Analytiques avancées</div>
+                    <div class="pricing-feature muted">✗ Countdowns illimités</div>
+                    <div class="pricing-feature muted">✗ Polices personnalisées</div>
+                    <div class="pricing-feature muted">✗ Support prioritaire</div>
+                </div>
+            </div>
+
+            <!-- PRO -->
+            <div class="pricing-card featured">
+                <div class="pricing-popular-badge">Plus populaire</div>
+                <div class="pricing-plan-name">Pro</div>
+                <div class="pricing-price-row">
+                    <div class="pricing-price" id="pro-price">9€</div>
+                    <div class="pricing-period" id="pro-period">/mois</div>
+                </div>
+                <div class="pricing-desc">Pour les marketeurs et créateurs de contenu</div>
+                <button class="btn btn-primary" style="width:100%;justify-content:center;margin:20px 0" onclick="handlePricingCta('pro')">Commencer avec Pro →</button>
+                <div class="pricing-features">
+                    <div class="pricing-feature">✓ Countdowns illimités</div>
+                    <div class="pricing-feature">✓ GIF animé haute qualité</div>
+                    <div class="pricing-feature">✓ Polices personnalisées</div>
+                    <div class="pricing-feature">✓ Analytiques avancées</div>
+                    <div class="pricing-feature">✓ Lien au clic</div>
+                    <div class="pricing-feature">✓ Support email prioritaire</div>
+                    <div class="pricing-feature muted">✗ White-label</div>
+                    <div class="pricing-feature muted">✗ Accès API</div>
+                </div>
+            </div>
+
+            <!-- BUSINESS -->
+            <div class="pricing-card">
+                <div class="pricing-plan-name">Business</div>
+                <div class="pricing-price-row">
+                    <div class="pricing-price" id="business-price">29€</div>
+                    <div class="pricing-period" id="business-period">/mois</div>
+                </div>
+                <div class="pricing-desc">Pour les agences et équipes marketing</div>
+                <button class="btn btn-ghost" style="width:100%;justify-content:center;margin:20px 0" onclick="handlePricingCta('business')">Commencer avec Business →</button>
+                <div class="pricing-features">
+                    <div class="pricing-feature">✓ Tout ce qui est inclus dans Pro</div>
+                    <div class="pricing-feature">✓ White-label (votre domaine)</div>
+                    <div class="pricing-feature">✓ Accès API complet</div>
+                    <div class="pricing-feature">✓ Gestion d'équipe</div>
+                    <div class="pricing-feature">✓ Rapports exportables</div>
+                    <div class="pricing-feature">✓ Support dédié & SLA</div>
+                    <div class="pricing-feature">✓ Onboarding personnalisé</div>
+                    <div class="pricing-feature">✓ Facturation entreprise</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="pricing-faq">
+            <div class="faq-title">Questions fréquentes</div>
+            <div class="faq-grid">
+                <div class="faq-item">
+                    <div class="faq-q">Puis-je changer de plan à tout moment ?</div>
+                    <div class="faq-a">Oui, vous pouvez passer à un plan supérieur ou inférieur à tout moment. Le changement est effectif immédiatement.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-q">Les GIFs fonctionnent-ils dans tous les clients email ?</div>
+                    <div class="faq-a">Oui — Gmail, Apple Mail, Yahoo, Outlook 2013+, iOS Mail et tous les grands ESP. Outlook 2007-2010 affiche la première frame statique.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-q">Que se passe-t-il quand un countdown expire ?</div>
+                    <div class="faq-a">Par défaut, le GIF affiche 00:00:00:00. Vous pouvez configurer un texte personnalisé ou masquer l'image.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-q">Y a-t-il un engagement de durée ?</div>
+                    <div class="faq-a">Non, tous les plans sont sans engagement. Vous pouvez annuler à tout moment depuis votre espace de facturation.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- ============================================================
      LOGIN PAGE
      ============================================================ -->
 <div id="page-login" class="page">
@@ -133,9 +241,7 @@
             </div>
             <div class="auth-title">Bon retour 👋</div>
             <div class="auth-subtitle">Connectez-vous à votre compte</div>
-
             <div id="login-error" class="auth-error" style="display:none"></div>
-
             <div class="form-group">
                 <label class="form-label">Email</label>
                 <input type="email" class="form-input" id="login-email" placeholder="vous@email.com">
@@ -144,16 +250,13 @@
                 <label class="form-label">Mot de passe</label>
                 <input type="password" class="form-input" id="login-password" placeholder="••••••••" onkeydown="if(event.key==='Enter')login()">
             </div>
-            <button class="btn btn-primary" style="width:100%;justify-content:center;margin-top:8px" onclick="login()" id="login-btn">Se connecter</button>
-
+            <button class="btn btn-primary" style="width:100%;justify-content:center" onclick="login()" id="login-btn">Se connecter</button>
+            <div class="auth-divider">ou</div>
             <a href="/auth/google" class="btn btn-google">
-                <svg width="18" height="18" viewBox="0 0 24 24" style="margin-right:6px"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l3.66-2.84z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
+                <svg width="18" height="18" viewBox="0 0 24 24" style="margin-right:8px"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l3.66-2.84z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
                 Continuer avec Google
             </a>
-            <div class="auth-divider">ou</div>
-            <div class="auth-switch">
-                Pas encore de compte ? <a href="#" onclick="showPage('register')">S'inscrire gratuitement</a>
-            </div>
+            <div class="auth-switch">Pas encore de compte ? <a href="#" onclick="showPage('register')">S'inscrire gratuitement</a></div>
         </div>
     </div>
 </div>
@@ -170,9 +273,7 @@
             </div>
             <div class="auth-title">Créer un compte</div>
             <div class="auth-subtitle">Gratuit · Aucune carte requise</div>
-
             <div id="register-error" class="auth-error" style="display:none"></div>
-
             <div class="form-group">
                 <label class="form-label">Nom <span class="optional">(optionnel)</span></label>
                 <input type="text" class="form-input" id="register-name" placeholder="Votre nom">
@@ -185,16 +286,13 @@
                 <label class="form-label">Mot de passe <span class="optional">(8 caractères min.)</span></label>
                 <input type="password" class="form-input" id="register-password" placeholder="••••••••" onkeydown="if(event.key==='Enter')register()">
             </div>
-            <button class="btn btn-primary" style="width:100%;justify-content:center;margin-top:8px" onclick="register()" id="register-btn">Créer mon compte →</button>
-
+            <button class="btn btn-primary" style="width:100%;justify-content:center" onclick="register()" id="register-btn">Créer mon compte →</button>
+            <div class="auth-divider">ou</div>
             <a href="/auth/google" class="btn btn-google">
-                <svg width="18" height="18" viewBox="0 0 24 24" style="margin-right:6px"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l3.66-2.84z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
+                <svg width="18" height="18" viewBox="0 0 24 24" style="margin-right:8px"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l3.66-2.84z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
                 Continuer avec Google
             </a>
-            <div class="auth-divider">ou</div>
-            <div class="auth-switch">
-                Déjà un compte ? <a href="#" onclick="showPage('login')">Se connecter</a>
-            </div>
+            <div class="auth-switch">Déjà un compte ? <a href="#" onclick="showPage('login')">Se connecter</a></div>
         </div>
     </div>
 </div>
@@ -214,7 +312,6 @@
                 <button class="btn btn-success btn-lg" onclick="publishCountdown()" id="publish-btn">✓ Publier & obtenir le code</button>
             </div>
         </div>
-
         <div class="create-layout">
             <div class="create-form-col">
                 <div class="form-card">
@@ -238,7 +335,6 @@
                         </select>
                     </div>
                 </div>
-
                 <div class="form-card">
                     <div class="form-card-title">🎨 Apparence</div>
                     <div class="form-group">
@@ -268,7 +364,6 @@
                         <input type="number" class="form-input" id="cd-width" value="400" min="200" max="800">
                     </div>
                 </div>
-
                 <div class="form-card">
                     <div class="form-card-title">⏰ Après expiration</div>
                     <div class="form-group" style="margin-bottom:0">
@@ -280,8 +375,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- PREVIEW PANEL -->
             <div class="preview-panel">
                 <div class="panel-card">
                     <div class="panel-header">
@@ -300,7 +393,6 @@
                         </div>
                     </div>
                     <div class="preview-warning">⚠️ Aperçu indicatif — le rendu GIF final peut légèrement varier</div>
-
                     <div class="code-section" id="code-section" style="display:none">
                         <div class="code-section-title">Code à intégrer</div>
                         <div class="code-tabs-row">
@@ -320,7 +412,6 @@
                             <span class="url-value" id="gif-url-display">—</span>
                         </div>
                     </div>
-
                     <div class="compat-section">
                         <div class="compat-title">Compatibilité</div>
                         <span style="color:var(--green)">✓</span> Gmail · Apple Mail · iOS Mail<br>
@@ -349,10 +440,10 @@
             </div>
             <div class="sidebar-spacer"></div>
             <div class="sidebar-plan-box">
-                <div class="sidebar-plan-name">Plan Free <span class="plan-chip">Free</span></div>
+                <div class="sidebar-plan-name">Plan Free <span class="plan-chip" id="sidebar-plan-chip">Free</span></div>
                 <div class="quota-progress"><div class="quota-fill" id="quota-fill" style="width:0%"></div></div>
                 <div class="quota-text" id="quota-text">0 / 3 countdowns</div>
-                <button class="btn btn-primary btn-sm" style="width:100%;justify-content:center;margin-top:8px" onclick="upgradePlan('pro_monthly')">Passer à Pro ↗</button>
+                <button class="btn btn-primary btn-sm" style="width:100%;justify-content:center;margin-top:8px" id="upgrade-btn" onclick="upgradePlan('pro_monthly')">Passer à Pro ↗</button>
             </div>
         </div>
         <div class="main-content">
